docs/errors/examples/invalid-allowed-argument/invalid-allowed-argument.expected.txt
error[E4101]: invalid `@allowed` argument
  --> invalid-allowed-argument.grob:6:13
   |
 6 |     @allowed(ENVS)
   |             ^^^^^^
   |
   = note: `@allowed` requires a literal list of values, not an identifier
   = help: write the allowed values inline: `@allowed("dev", "staging", "prod")`
